# genPi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: AudioMidiHost.h  GenPi.h  Globals.h  HardwareEncoder.h  Host.h  Object.h  ParameterHost.h  Processor.h  RtAudioMidiHost.h  Settings.h  gen_export.h  genexport.h
patchers/: gen~.pulsar_demo.maxpat
src/: Object.cpp  gen_export.cpp  gen_exported.cpp  genexport.cpp  main.cpp
